# EIC_JANA_Example

./: README.md
EICRawData/: CMakeLists.txt  CMakeLists.txt.unused  EASIC_hit.h  EEndCapDigiHit.h  EICRawData.cc  ERawDataSource.cc  ERawDataSource.h  JFactory_EEndCapDigiHit.cc  JFactory_EEndCapDigiHit.h
EndCap/: CMakeLists.txt  EEndCapHit.h  EndCap.cc  EndCapProcessor.cc  EndCapProcessor.h  JFactory_EEndCapHit.cc  JFactory_EEndCapHit.h
ExampleDD4HepService/: CMakeLists.txt  ExampleDD4HepService.cc  ExampleDD4HepService.h
jana_podio/: CMakeLists.txt  JEventSourcePODIO.cc  JEventSourcePODIO.h  MyProcessor.cc  MyProcessor.h  jana_podio.cc
